# Fake-E-Commerce

./: .gitignore  01_data_preparation.ipynb  README.md  analysis.ipynb  create_data.py  create_database.ipynb  data_preparation.ipynb  pyproject.toml  validate_data.ipynb
dashboard_project/: Dockerfile  app.py  db.py  tmp.py
notebooks/: data_preparation.ipynb  marimo_notebook.py
