[project]
name = "usage-data-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "duckdb>=1.4.1",
    "faker>=37.12.0",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "rich>=14.2.0",
]
