[project]
name = "usage-data-example"
version = "0.1.0"
description = "A small data analysis with duckdb and container"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "duckdb>=1.4.2",
    "faker>=37.12.0",
    "icecream>=2.1.8",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "rich>=14.2.0",
]
